third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/enum_invalid_casing.rs
#[derive(derive_more::FromStr)]
#[from_str(rename_all = "Whatever")]
enum Enum {
    UnitVariant,
}

fn main() {}
